# arg-needle

./: .gitignore  CMakeLists.txt  MANIFEST.in  PyPI_README.md  README.md  RELEASE_NOTES.md  pyproject.toml  setup-pre-commit.sh  setup.py
.github/workflows/: build-wheels.yml  cpp_tests.yml  pip-install-macos.yml  pip-install-ubuntu.yml  python_examples.yml  python_tests.yml
src/: CMakeLists.txt  decoders.py
src/hashing/: .clang-format  FileUtils.cpp  FileUtils.hpp  HapData.cpp  HapData.hpp  pybind.cpp  utils.hpp
test/: run_regression_test.py  test_import.py  test_regression.py
test/cpp/: CMakeLists.txt  test_file_utils.cpp  test_utils.cpp
