[build-system]
requires = ["scikit-build-core>=0.11.6", "pybind11", "setuptools"]
build-backend = "scikit_build_core.build"

[project]
dynamic = ["readme"]
name = "arg-needle"
version = "1.0.3"
description = "Ancestral recombination graph (ARG)"
authors = [
    { name = "ARG-Needle Developers" }
]
requires-python = ">=3.9"

dependencies = [
    'arg-needle-lib>=1.0.0',
    'asmc-asmc>=1.3.1',
    'fastcluster',
    'msprime>=1.0.0',
    'numpy>=1.17.0',
    'pandas',
    'psutil',
    'tskit>=0.1.5',
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

#[project.optional-dependencies]
#dev = [
#    "pytest",
#    "tszip>=0.2.5",
#]
#docs = [
#    "sphinx",
#    "sphinx-rtd-theme",
#]

[project.scripts]
infer_args="arg_needle.scripts.infer_args:main"
infer_args_advanced="arg_needle.scripts.infer_args_advanced:main"
prepare_example="arg_needle.scripts.prepare_example:main"

[tool.scikit-build]
cmake.args = [
    "-DPYTHON_BINDINGS=ON",
    "-DWARNINGS_AS_ERRORS=OFF",
    "-DENABLE_TESTING=OFF",
]
build.verbose = true
cmake.build-type = "Release"

metadata.readme.provider = "scikit_build_core.metadata.fancy_pypi_readme"
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "PyPI_README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "RELEASE_NOTES.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"arg_needle" = ["resources/*"]

